--- a/lab03/cards/proart-b550-creator.html
+++ b/lab03/cards/proart-b550-creator.html
@@ -5,11 +5,11 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
 
 <body>
-    <h1 class="text">ProArt Z490-CREATOR 10G</h1>
+    <h1 class="text">ProArt B550-CREATOR</h1>
 
     <table class="d1">
         <tr>
@@ -21,21 +21,20 @@
         </tr>
 
         <tr>
-            <td class="t2 h2"><img src="assets/images/ProArt_Z490-CREATOR_10G.png"></td>
+            <td class="t2 h2"><img src="../assets/images/ProArt_B550-CREATOR.webp"></td>
             <td class="t2 h2">
-                <p>10th Gen Intel® Core™</p>
-                <p>Pentium® Gold</p>
-                <p>Celeron®</p>
+                <p>AMD Ryzen™ 3-го поколения</p>
+                <p>AMD Ryzen™ с видеокартой Radeon™</p>
             </td>
-            <td class="t2 h2">Intel® Z490</td>
+            <td class="t2 h2">AMD® B550</td>
             <td class="t2 h2">
                 <p>4 x DIMM, Max. 128GB, DDR4</p>
                 <p>Dual Channel Memory Architecture</p>
-                <p>Supports Intel® Extreme Memory Profile (XMP)</p>
                 <p>OptiMem II</p>
             </td>
             <td class="t2 h2">
-                <p>Intel® I225-V 2.5Gb Ethernet</p>
+                <p>2 x Intel® 2.5Gb Ethernet</p>
+                <p>ASUS LANGuard</p>
             </td>
         </tr>
     </table>
