--- a/lab03/cards/proart-b660-creator-d4.html
+++ b/lab03/cards/proart-b660-creator-d4.html
@@ -5,11 +5,11 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
 
 <body>
-    <h1 class="text">ProArt B550-CREATOR</h1>
+    <h1 class="text">ProArt B660-CREATOR D4</h1>
 
     <table class="d1">
         <tr>
@@ -21,19 +21,21 @@
         </tr>
 
         <tr>
-            <td class="t2 h2"><img src="assets/images/ProArt_B550-CREATOR.webp"></td>
+            <td class="t2 h2"><img src="../assets/images/ProArt_B660-CREATOR_D4.webp"></td>
             <td class="t2 h2">
-                <p>AMD Ryzen™ 3-го поколения</p>
-                <p>AMD Ryzen™ с видеокартой Radeon™</p>
+                <p>Intel® Socket LGA1700 for 12th Gen Intel® Core™</p>
+                <p>Pentium® Gold and Celeron® Processors</p>
             </td>
-            <td class="t2 h2">AMD® B550</td>
+            <td class="t2 h2">Intel® B660</td>
             <td class="t2 h2">
                 <p>4 x DIMM, Max. 128GB, DDR4</p>
                 <p>Dual Channel Memory Architecture</p>
+                <p>Supports Intel® Extreme Memory Profile (XMP)</p>
                 <p>OptiMem II</p>
             </td>
             <td class="t2 h2">
-                <p>2 x Intel® 2.5Gb Ethernet</p>
+                <p>1 x Realtek 2.5Gb Ethernet</p>
+                <p>1 x Intel® 1Gb Ethernet</p>
                 <p>ASUS LANGuard</p>
             </td>
         </tr>
