--- a/lab03/cards/proart-z490-creator-10g.html
+++ b/lab03/cards/proart-z490-creator-10g.html
@@ -5,11 +5,11 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
 
 <body>
-    <h1 class="text">ProArt B660-CREATOR D4</h1>
+    <h1 class="text">ProArt Z490-CREATOR 10G</h1>
 
     <table class="d1">
         <tr>
@@ -21,12 +21,13 @@
         </tr>
 
         <tr>
-            <td class="t2 h2"><img src="assets/images/ProArt_B660-CREATOR_D4.webp"></td>
+            <td class="t2 h2"><img src="../assets/images/ProArt_Z490-CREATOR_10G.png"></td>
             <td class="t2 h2">
-                <p>Intel® Socket LGA1700 for 12th Gen Intel® Core™</p>
-                <p>Pentium® Gold and Celeron® Processors</p>
+                <p>10th Gen Intel® Core™</p>
+                <p>Pentium® Gold</p>
+                <p>Celeron®</p>
             </td>
-            <td class="t2 h2">Intel® B660</td>
+            <td class="t2 h2">Intel® Z490</td>
             <td class="t2 h2">
                 <p>4 x DIMM, Max. 128GB, DDR4</p>
                 <p>Dual Channel Memory Architecture</p>
@@ -34,9 +35,7 @@
                 <p>OptiMem II</p>
             </td>
             <td class="t2 h2">
-                <p>1 x Realtek 2.5Gb Ethernet</p>
-                <p>1 x Intel® 1Gb Ethernet</p>
-                <p>ASUS LANGuard</p>
+                <p>Intel® I225-V 2.5Gb Ethernet</p>
             </td>
         </tr>
     </table>
