--- a/lab03/cards/proart-z690-creator-wifi.html
+++ b/lab03/cards/proart-z690-creator-wifi.html
@@ -5,7 +5,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
         </tr>
 
         <tr>
-            <td class="t2 h2"><img src="assets/images/ProArt_Z690-CREATOR_WIFI.webp"></td>
+            <td class="t2 h2"><img src="../assets/images/ProArt_Z690-CREATOR_WIFI.webp"></td>
             <td class="t2 h2">
                 <p>Intel 12th Gen Core</p>
                 <p>Pentium Gold</p>
