--- a/lab03/index.html
+++ b/lab03/index.html
@@ -35,11 +35,11 @@
         </tr>
 
         <tr>
-            <td class="t2 h2"><a href="proart-b660-creator-d4.html">ProArt B660-CREATOR D4</a></td>
-            <td class="t2 h2"><a href="proart-z690-creator-wifi.html">ProArt Z690-CREATOR WIFI</a></td>
-            <td class="t2 h2"><a href="proart-x570-creator-wifi.html">ProArt X570-CREATOR WIFI</a></td>
-            <td class="t2 h2"><a href="proart-b550-creator.html">ProArt B550-CREATOR</a></td>
-            <td class="t2 h2"><a href="proart-z490-creator-10g.html">ProArt Z490-CREATOR 10G</a></td>
+            <td class="t2 h2"><a href="cards/proart-b660-creator-d4.html">ProArt B660-CREATOR D4</a></td>
+            <td class="t2 h2"><a href="cards/proart-z690-creator-wifi.html">ProArt Z690-CREATOR WIFI</a></td>
+            <td class="t2 h2"><a href="cards/proart-x570-creator-wifi.html">ProArt X570-CREATOR WIFI</a></td>
+            <td class="t2 h2"><a href="cards/proart-b550-creator.html">ProArt B550-CREATOR</a></td>
+            <td class="t2 h2"><a href="cards/proart-z490-creator-10g.html">ProArt Z490-CREATOR 10G</a></td>
         </tr>
     </table>
 </body>
