--- a/lab07/index.html
+++ b/lab07/index.html
@@ -36,6 +36,7 @@
     <br>
 
     <div class="mb-6">
+      <label for="result" class="block mb-2 text-sm font-medium text-gray-900">Результат: </label>
       <input type="text" id="result" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" readonly>
     </div>
   </div>
